--- a/index.html
+++ b/index.html
@@ -1,14 +1,5 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" >
-		<meta name="author" content="a">
-		<meta name="description" content="b">
-		<title>hinafu.github.io lol</title>
-	</head>
-
-	<body>
-		<h1>Test.github.io</h1>
-	</body>
-</html>
+---
+title: omh ahora sí jeje
+layout: default
+---
+<h1>{{ "TEST.github.io" | capitalize }}</h1>
