--- a/index.html
+++ b/index.html
@@ -1,31 +1,77 @@
 ---
 layout: default
-title: Title...
----
-<!-- <h1>{{ "TEST.github.io" | capitalize }}</h1> -->
 
+title: Home
+
+about_pic: /assets/img/about.jpg
+about_title: About Me
+about_content: |
+  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras convallis orci pellentesque tellus pretium molestie. Integer interdum scelerisque sodales. Mauris at laoreet enim, at fringilla ipsum. Vestibulum tincidunt risus at leo ullamcorper sollicitudin. Aliquam et rutrum quam. Phasellus varius commodo pulvinar. Donec varius at mauris ut semper.
+
+  Line 2.
+
+---
 <section class="section__about">
 	<div class="about__wrapper">
 		<div class="about__main">
 			<div class="about__main__pic">
-				<img src="" alt="">
+				<div class="about__main__pic--inside" style="background-image: url('{{ page.about_pic }}')"></div>
 			</div>
 
 			<div class="about__main__info">
-				<h1>Name</h1>
-				<div class="about__main_desc">
-					<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras convallis orci pellentesque tellus pretium molestie. Integer interdum scelerisque sodales. Mauris at laoreet enim, at fringilla ipsum. Vestibulum tincidunt risus at leo ullamcorper sollicitudin. Aliquam et rutrum quam. Phasellus varius commodo pulvinar. Donec varius at mauris ut semper.</p>
-
-					<p>Fusce sit amet convallis libero, eget scelerisque ex. Cras sit amet aliquam nunc. Phasellus ut justo id risus tincidunt iaculis eget vel massa. Pellentesque cursus magna nibh, in molestie sem interdum posuere. Donec consequat nibh non ligula aliquet, eu ultricies leo pellentesque. Nullam interdum dictum dignissim. Aliquam fermentum lacus felis, ut efficitur velit tempus eget. Maecenas vestibulum vehicula volutpat. Quisque eget faucibus tortor. Cras ultricies ante mi, ut volutpat magna congue vitae. Vivamus nec malesuada elit. Praesent in aliquam arcu, nec tincidunt turpis. </p>
-				</div>
-				<div class="btn">
-					<a href="">Read More</a>
+				<div class="about__main__info__wrapper">
+					<h1>{{ page.about_title }}</h1>
+					<div class="about__main_desc">
+						{{ page.about_content | markdownify }}
+					</div>
+					<div class="btn">
+						<a href="/about.html">Read More</a>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 </section>
 
-<section class="1">
-	<h1>Test</h1>
+<section class="section__events">
+	<div class="section__wrapper">
+		<div class="section__title">
+			<h1>Upcoming Events</h1>
+		</div>
+
+		<div class="section__content">
+			<div class="list__events">
+				<ul>
+					{% for event in site.events %}
+					<li>
+						<a href="#">
+							<figure>
+								<div class="figure__img">
+									<div style="background-image: url('{{ event.event_image }}')"></div>
+								</div>
+								<figcaption>
+									<h2>{{ event.event_name }}</h2>
+									<span>{{ event.event_date }}</span>
+								</figcaption>
+							</figure>
+						</a>
+					</li>
+					{% endfor %}
+				</ul>
+			</div>
+		</div>
+	</div>
+	<div class="alt__background"><span></span></div>
+</section>
+
+<section class="section__news">
+	<div class="section__wrapper">
+		<div class="section__title">
+			<h1>News</h1>
+		</div>
+
+		<div class="section__content">
+			
+		</div>
+	</div>
 </section>
