--- a/home3.html
+++ b/home3.html
@@ -6,13 +6,11 @@ title: Home
 about_pic: /assets/img/about.jpg
 about_title: About Me
 about_content: |
-  *My main research interest focuses on trait evolution to understand the evolutionary processes and biodiversity patterns in medicinal species, scientifically supporting traditional knowledge, to ultimately improve health...*
+  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras convallis orci pellentesque tellus pretium molestie. Integer interdum scelerisque sodales. Mauris at laoreet enim, at fringilla ipsum. Vestibulum tincidunt risus at leo ullamcorper sollicitudin. Aliquam et rutrum quam. Phasellus varius commodo pulvinar. Donec varius at mauris ut semper.
 
-  I am an evolutionary biologist with strong focus on trait evolution to understand the evolutionary processes and biodiversity patterns in medicinal species, scientifically supporting traditional knowledge, to ultimately improve health. To achieve this, I work with museum collections and modern samples using phylogenomic and chromatographic approaches.
+  Line 2.
 
-  Currently, I am a Marie Skłodowska-Curie PhD fellow in the Natural [History Museum of Denmark](https://evogenomics.snm.ku.dk/research-groups/roensted_group/) and an early stage researcher in the [Plant.ID project](https://www.plantid.uio.no/). Originally from Peru, where I obtained my bachelors in Genetics and Biotechnology, then I moved to China to study my masters in Bionformatics… 
-
-_page: home
+_page: home3
 ---
 <section class="section__about">
 	<div class="about__wrapper">
@@ -21,13 +19,13 @@ _page: home
 				<div class="about__main__pic--inside" style="background-image: url('{{ page.about_pic }}')"></div>
 			</div>
 
-			<div class="about__main__info general__text">
+			<div class="about__main__info">
 				<div class="about__main__info__wrapper">
 					<h1>{{ page.about_title }}</h1>
 					<div class="about__main_desc">
 						{{ page.about_content | markdownify }}
 					</div>
-					<div class="about__main__read_more btn">
+					<div class="btn">
 						<a href="/about.html">Read More</a>
 					</div>
 				</div>
