--- a/index.html
+++ b/index.html
@@ -44,17 +44,20 @@ _page: home
 
 		<div class="section__content">
 			<div class="list__events">
-				<ul>
-					{% for event in site.events %}
+				{% assign total_events = site.events | sort: "event_date_sort" %}
+				{% assign n_events = total_events | size %}
+				<ul class="list__columns-{{ n_events }}">
+					{% for event in total_events limit: 4 %}
 					<li>
-						<a href="#">
+						<a href="{{ event.event_link }}">
 							<figure>
 								<div class="figure__img">
 									<div style="background-image: url('{{ event.event_image }}')"></div>
 								</div>
 								<figcaption>
 									<h2>{{ event.event_name }}</h2>
-									<span>{{ event.event_date }}</span>
+									<h3>{{ event.event_desc }}</h3>
+									<span>{{ event.event_date_render }}</span>
 								</figcaption>
 							</figure>
 						</a>
